--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "next": "14.2.12",
+    "framer-motion": "^12.7.4",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
