--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "framer-motion": "^12.7.4",
     "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "stripe": "^18.2.1",
     "swiper": "^11.2.2"
   },
   "devDependencies": {
